[gd_scene load_steps=11 format=3 uid="uid://cjg8c8ljqbiod"]

[ext_resource type="Script" path="res://Scripts/game_ui.gd" id="1_ffqku"]
[ext_resource type="FontFile" uid="uid://cbh4o7uvh08ww" path="res://UI/Font/Roboto-Black.ttf" id="2_ew2xq"]
[ext_resource type="Texture2D" uid="uid://6pyyv0qj0mri" path="res://UI/GUI/Gen UI/UI_WINDOW (1).png" id="3_1dylo"]
[ext_resource type="Texture2D" uid="uid://dhjdhbfwnyaab" path="res://UI/GUI/Buttons/BTN_GRAY_RECT_OUT.png" id="3_feu15"]
[ext_resource type="Texture2D" uid="uid://bjyq26bquntlu" path="res://UI/GUI/Buttons/BTN_BLUE_RECT_OUT.png" id="4_sdpab"]
[ext_resource type="Texture2D" uid="uid://d3e27wbumdvqt" path="res://UI/GUI/Buttons/BTN_BLUE_RECT_IN.png" id="5_wnmy0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_785wn"]
texture = ExtResource("3_1dylo")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dpn4j"]
texture = ExtResource("3_feu15")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ofbnu"]
texture = ExtResource("4_sdpab")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wyk10"]
texture = ExtResource("5_wnmy0")

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffqku")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = -555.0
offset_right = 386.0
offset_bottom = -475.0
grow_vertical = 0
theme_override_font_sizes/font_size = 25
text = "Current score:"
vertical_alignment = 1

[node name="GuessWordLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -153.0
offset_right = 650.0
offset_bottom = 158.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_ew2xq")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxTexture_785wn")
text = "Guess Word Display"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="GuessWordLabel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -108.0
grow_horizontal = 2
grow_vertical = 0

[node name="Answer1_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -144.0
offset_right = -152.0
offset_bottom = -69.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dpn4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_ofbnu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wyk10")
text = "Answer 1"

[node name="Answer2_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -29.0
offset_right = -152.0
offset_bottom = 46.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dpn4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_ofbnu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wyk10")
text = "Answer 2"
metadata/_edit_use_anchors_ = true

[node name="Answer3_btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -402.0
offset_top = 86.0
offset_right = -152.0
offset_bottom = 161.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dpn4j")
theme_override_styles/hover = SubResource("StyleBoxTexture_ofbnu")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wyk10")
text = "Answer 3"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Answer1_btn" to="." method="_on_answer_1_btn_pressed"]
[connection signal="pressed" from="Answer2_btn" to="." method="_on_answer_2_btn_pressed"]
[connection signal="pressed" from="Answer3_btn" to="." method="_on_answer_3_btn_pressed"]
